# LocalPass

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  IMPLEMENTATION_SUMMARY.md  ISSUE_18_REPORT.md  LICENSE  PR_DESCRIPTION.md  README.md  RELEASE_NOTES.md  SECURITY.md  pyproject.toml  pytest-results.xml
.github/workflows/: auto-format.yml  ci.yml  publish.yml
core/: vault.py
docs/: SECURITY.md  USER_MANUAL.md
src/localpass/: cli.py  hibp.py  prompts.py  vault.py  version.py
src/localpass/cli/: main.py
src/localpass/vault/: __init__.py  crypto.py  models.py  repository.py  service.py  vault_serialization.py
tests/: conftest.py  test_cli.py  test_hibp.py  test_prompts.py  test_vault.py  test_vault_crypto.py  test_vault_models.py
