[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "localpass"
version = "0.2.0"
description = "Local-first, offline password manager."
authors = [{name = "Åukasz Perek, lukasz.perek@outlook.com"}]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cryptography",
    "click>=8.0",
    "zxcvbn",
    "requests",
]

[project.scripts]
localpass = "localpass.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "black",
    "mypy",
    "pytest-cov"
]

[tool.pytest.ini_options]
pythonpath = "src"
filterwarnings = [
    "ignore:Can not control echo on the terminal:getpass.GetPassWarning",
    "ignore:PlaintextVaultRepository stores vault data in plaintext and must not be used in production environments:UserWarning",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
extend-select = ["I"]  # import sorting

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
mypy_path = "src"

